button for home and go back added to post_detail.html. bag.html button edited

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -115,15 +115,16 @@
                             </tr>
                         </table>
                     </div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+                    {% else %}
+                    <div class="d-flex justify-content-center align-items-center flex-column">
+                        <div>
+                            <p class="lead mb-5">Your bag is empty.</p>
+                        </div>
+                        <div>
+                            <a href="{% url 'products' %}" class="btn btn-outline-dark">Keep Shopping</a>
+                        </div>
+                    </div>
+                    {% endif %}
             </div>
         </div>
     </div>
