--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<header>
+    <div>   
+        <h1>Thank You</h1>
     </div>
+</header>
 {% endblock %}
 
 {% block content %}
@@ -18,10 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
-                <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black mt-3">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
             </div>
         </div>
 
@@ -193,12 +190,7 @@
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
                 {% if from_profile %}
-                <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
-					<span class="icon mr-2">
-						<i class="fas fa-angle-left"></i>
-					</span>
-					<span class="text-uppercase">Back to Profile</span>
-				</a>
+                <a href="{% url 'profile' %}" class="btn btn-outline-dark mt-4 mb-4">Back to Profile</a>
                 {% else %}
 				<a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
 					<span class="icon mr-2">
