--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<section class="shop-bag">
+<section class="shop-bag  bag-mobile">
     <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
@@ -25,8 +25,8 @@
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
                                 <tr>
-                                    <th scope="col">Product Info</th>
                                     <th scope="col"></th>
+                                    <th scope="col">Product Info</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
@@ -35,7 +35,7 @@
 
                             {% for item in bag_items %}
                                 <tr>
-                                    <td class="p-3 w-25">
+                                    <td class="p-3 width-25">
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                                     </td>
                                     <td class="py-3">
@@ -46,7 +46,7 @@
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
-                                    <td class="py-3 w-25">
+                                    <td class="py-3 width-25">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
