--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    <p class="lead mb-0 font-weight-bold product-detail-price">${{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -55,7 +55,7 @@
                         <div class="form-row">
                             {% with product.has_sizes as s %}
                             {% if s %}
-                                <div class="col-12">
+                                <div class="col-12 size-qty-mobile">
                                     <p><strong>Size:</strong></p>
                                     <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size' aria-label="size">
                                         <option value="xs">XS</option>
@@ -66,7 +66,7 @@
                                     </select>
                                 </div>
                             {% endif %}
-                            <div class="col-12">
+                            <div class="col-12 size-qty-mobile">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group input-group-{{ product.id }}">
@@ -94,13 +94,13 @@
                             </div>
 
                             <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn btn-outline-dark mt-5">
+                                <a href="{% url 'products' %}" class="btn btn-outline-dark keep-shop-btn">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
+                                    <span class="text-uppercase ">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-dark text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-dark text-uppercase keep-shop-btn" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
