trying to deploy

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
+        <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 
     {% endblock %}
 
