--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -1,14 +1,21 @@
 {% extends "account/base.html" %}
+{% load static %}
 
-{% load i18n %}
+{% block page_header %}
+<header>
+    <div>   
+        <h1>Email Confirmation</h1>
+        <div class="subtitle">
+            <p>Verify your E-mail Address</p>
+        </div>
+    </div>
+</header>
+{% endblock %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
-
-{% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
-    <hr>
-
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+{% block content %}
+<section class="about-us-section">
+    <div class="card-container">
+        <p>We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.</p>
+    </div>
+</section>
 {% endblock %}
